--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<style>
+	<style>
+body {
+  background-color: linen;
+}
+
+h1 {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
+}
+</style>
 <body>
-<button onclick="myFunction()">devybutton</button>
+
+<h1><button onclick="myFunction()">devybutton</button></h1>
 
 <script>
 function myFunction() {
-	var devy = new Audio('cum.mp3')
-  document.getElementById("demo").innerHTML = audio.play();
+	var devy = new Audio('https://devybutton.github.io/cum.mp3')
+	devy.play();
 }
 </script>
 
