--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
 	<style>
 	<style>
-body {
-  background-color: linen;
-}
-
 h1 {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-}
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 </style>
 <body>
